@startuml
entity users {
    id : int <<PK>>
    name : varchar
    email : varchar <<UNIQUE>>
    password_hash : varchar
    created_at : datetime
    updated_at : datetime
}

entity categories {
    id : int <<PK>>
    name : varchar
    created_at : datetime
}

entity products {
    id : int <<PK>>
    category_id : int <<FK>>
    name : varchar
    description : varchar
    price double
    stock int
    created_at datetime
    updated_at datetime
}

entity carts {
    id : int <<PK>>
    user_id : int <<FK>>
    created_at : datetime
}

entity cart_items {
    id : int <<PK>>
    cart_id : int <<FK>>
    product_id : int <<FK>>
    quantity : int
}

entity orders {
    id : int <<PK>>
    user_id : int <<FK>>
    total_price : double
    status : enum("pending", "paid", "cancelled")
    created_at : datetime
}

entity order_items {
    id : int <<PK>>
    order_id : int <<FK>>
    product_id : int <<FK>>
    price : double
    quantity : int
}

entity payments {
    id : int <<PK>>
    order_id : int <<FK>>
    payment_method : enum("transfer", "ewallet")
    status : enum("pending, success, failed")
    paid_at : varchar
}

categories||--|{products
users||--||carts
carts||--|{cart_items
products||--|{cart_items
users ||--|{orders
orders||--|{order_items
products||--|{order_items
orders ||--||payments
@enduml